--- a/README.Rmd
+++ b/README.Rmd
@@ -2,8 +2,53 @@
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+[![Project Status: Active - The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
 [![Travis-CI Build Status](https://travis-ci.org/zzawadz/nbpInterestRatesR.svg?branch=master)](https://travis-ci.org/zzawadz/nbpInterestRatesR)
 
+# Installation:
+
 ```{r, eval=FALSE}
+# devtools
 devtools::install_github("zzawadz/nbpInterestRatesR")
+
+# Or you can use pacman:
+pacman::p_load_gh("zzawadz/nbpInterestRatesR")
+```
+
+# Usage:
+
+### Interest rates from NBP website:
+
+```{r}
+pacman::p_load_gh("zzawadz/nbpInterestRatesR")
+options(max.print = 20)
+
+get_interest_rates()
+
+options(max.print = 5)
+# reference rate:
+get_interest_rates("ref")
+
+```
+
+### Maximum interest rate for loans in Poland
+
+```{r}
+options(max.print = 5)
+get_max_loan()
+```
+
+### Utility functions:
+
+```{r}
+options(max.print = 30)
+
+# get data:
+ret = get_interest_rates()
+
+# Convert xts to tbl and keep the date
+xts2tbl(ret)
+
+# expand to daily data:
+expand_daily(ret)
 ```
