get_nbp_interest_rates in readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -25,11 +25,11 @@ pacman::p_load_gh("zzawadz/nbpInterestRatesR")
 pacman::p_load_gh("zzawadz/nbpInterestRatesR")
 options(max.print = 20)
 
-get_interest_rates()
+get_nbp_interest_rates()
 
 options(max.print = 5)
 # reference rate:
-get_interest_rates("ref")
+get_nbp_interest_rates("ref")
 
 ```
 
@@ -46,7 +46,7 @@ get_max_loan()
 options(max.print = 30)
 
 # get data:
-ret = get_interest_rates()
+ret = get_nbp_interest_rates()
 
 # Convert xts to tbl and keep the date
 xts2tbl(ret)
