--- a/README.Rmd
+++ b/README.Rmd
@@ -23,34 +23,30 @@ pacman::p_load_gh("zzawadz/nbpInterestRatesR")
 
 ```{r}
 pacman::p_load_gh("zzawadz/nbpInterestRatesR")
-options(max.print = 20)
 
-get_nbp_interest_rates()
+tail(get_nbp_interest_rates())
 
-options(max.print = 5)
 # reference rate:
-get_nbp_interest_rates("ref")
+tail(get_nbp_interest_rates("ref"))
 
 ```
 
 ### Maximum interest rate for loans in Poland
 
 ```{r}
-options(max.print = 5)
-get_max_loan()
+tail(get_max_loan())
 ```
 
 ### Utility functions:
 
 ```{r}
-options(max.print = 30)
 
 # get data:
 ret = get_nbp_interest_rates()
 
 # Convert xts to tbl and keep the date
-xts2tbl(ret)
+tail(xts2tbl(ret))
 
 # expand to daily data:
-expand_daily(ret)
+tail(expand_daily(ret))
 ```
